feat: introduce basic enemy AI with BFS maze navigation